# carmelo

./: CMakeLists.txt  README.md  custom.h  target.cpp  targetless.cpp
src/: CMakeLists.txt  affordance.h  configurator.cpp  configurator.h  const.h  debug.h  disturbance.cpp  disturbance.h  graphTools.cpp  graphTools.h  measurement.cpp  measurement.h  robot.h  sensor.cpp  sensor.h  settings.h  task.cpp  task.h  worldbuilder.cpp  worldbuilder.h
test/: callbacks.h  testLoop.cpp  test_essentials.h  update_graph.cpp
test/unit_test/: CMakeLists.txt  backtrack.cpp  checkPlan.cpp  disturbance_dimensions.cpp  end_contact.cpp  explorer.cpp  fill_for_dist.cpp  find_match_s.cpp  get_disturbance.cpp  kmeans_clusters.cpp  match.cpp  match_equal.cpp  planner.cpp  processData_k.cpp  replanner.cpp  split_step.cpp  split_task.cpp  state_difference.cpp  subgraph.cpp  transitionMatrix.cpp
